manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: podinfo
  labels:
    app: podinfo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: podinfo
  template:
    metadata:
      labels:
        app: podinfo
    spec:
      containers:
        - name: podinfo
          image: netgrif/podinfo:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config-volume
              mountPath: /app/mnt/config
            - name: secret-volume
              mountPath: /app/mnt/secret
              readOnly: true
            - name: logs
              mountPath: /app/data
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
      #          livenessProbe:
      #            httpGet:
      #              path: /health
      #              port: 8080
      #            initialDelaySeconds: 3
      #            periodSeconds: 10
      #          readinessProbe:
      #            httpGet:
      #              path: /ready
      #              port: 8080
      #            initialDelaySeconds: 1
      #            periodSeconds: 5
      volumes:
        - name: config-volume
          configMap:
            name: podinfo-config
        - name: secret-volume
          secret:
            secretName: podinfo-secret
        - name: logs
          persistentVolumeClaim:
            claimName: podinfo-log-pvc
