manifests/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: podinfo
spec:
  serviceName: podinfo-headless
  replicas: 1
  selector:
    matchLabels:
      app: podinfo
  template:
    metadata:
      labels:
        app: podinfo
    spec:
      containers:
        - name: podinfo
          image: netgrif/podinfo:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 128Mi
#          livenessProbe:
#            httpGet:
#              path: /health
#              port: 8080
#            initialDelaySeconds: 3
#            periodSeconds: 10
#          readinessProbe:
#            httpGet:
#              path: /ready
#              port: 8080
#            initialDelaySeconds: 1
#            periodSeconds: 5
